--- a/style/shortcodes/style.css
+++ b/style/shortcodes/style.css
@@ -517,7 +517,7 @@ a > .certificate-item:hover {
   display: table-cell;
   width: 120px;
   height: 100%;
-  background-color: #f7f7f7;
+  background-color: #f5f5f5;
   padding: 25px;
   vertical-align: middle;
   border-top-left-radius: 5px;
@@ -562,7 +562,7 @@ a > .certificate-item:hover {
   padding: 0;
 }
 
-.knowledges li {;
+.knowledges li {
   display: inline-block;
   background-color: #0ba376;
   border-radius: 3px;
