--- a/style/shortcodes/style.css
+++ b/style/shortcodes/style.css
@@ -564,7 +564,7 @@ a > .certificate-item:hover {
 
 .knowledges li {
   display: inline-block;
-  background-color: #0ba376;
+  background-color: #00519b;
   border-radius: 3px;
   color: #fff;
   padding: 5px 10px;
